--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
+    "mongoose": "^6.2.10",
     "nodemon": "^2.0.15"
   }
 }
